Laying out company form. Fixing layout issue with company cards.

--- a/proj/ContactManager/Content/app.css
+++ b/proj/ContactManager/Content/app.css
@@ -29,7 +29,7 @@
     border-radius: 5px;
     background-color: #fff;
     box-shadow: 0 0 5px #999;
-    margin: 10px 35px 10px 0;
+    margin: 10px 10px 30px 0;
     min-width: 425px;
 }
 
